# xlayer-toolkit

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  REAME.md  testplan-blacklist-demo-opgeth.md
.claude/: Claude.md
.claude/plan/: 20260611-devnet-blacklist-mirror-demo-chain-195-prd.md  blacklist-mirror-interface-spec.md
bench/: BENCH-GUIDE.md  README.md  adventure-architecture.md  bench-orchestrate.sh  bench.sh  cherry-pick-guide.md  context-handoff.md  final-report-prompt.md  kona-cl-hypothesis.md  kona-optimisation-pr.md  load-guide.md  report-read-guide.md
bench/base/: base-cl-deep-dive.md  base-cl-fcu-deepdive.md  base-cl-vs-kona-comparison.md
bench/op-node/: op-node-deep-dive.md  op-node-vs-kona-comparison.md
bench/presentation/: cross-run-comparison.md  presentation.md
bench/scripts/: bench-adventure.sh  compare-opt2.py  fcu-tps-correlation.py  (+6 more)
benchmark/: README.md  bench.sh  setup-ubuntu.sh
benchmark/jolt/fibonacci/: Cargo.toml  Dockerfile  README.md  matrix.sh  run.sh
benchmark/jolt/fibonacci/.devcontainer/: devcontainer.json  post-create.sh
benchmark/jolt/fibonacci/guest/: Cargo.toml
benchmark/jolt/fibonacci/guest/src/: lib.rs
benchmark/jolt/fibonacci/src/: main.rs
benchmark/jolt/sha2/: Cargo.toml  Dockerfile  matrix.sh  run.sh
benchmark/jolt/sha2/.devcontainer/: devcontainer.json  post-create.sh
benchmark/jolt/sha2/guest/: Cargo.toml  build.rs
benchmark/jolt/sha2/guest/src/: lib.rs
benchmark/jolt/sha2/src/: main.rs
benchmark/risc0/fibonacci/host/: Cargo.toml
benchmark/risc0/fibonacci/host/src/: main.rs
benchmark/risc0/sha2/host/: Cargo.toml
benchmark/risc0/sha2/host/src/: main.rs
benchmark/risc0/sha2/methods/guest-precompile/: Cargo.toml
benchmark/risc0/sha2/methods/guest-precompile/src/: main.rs
benchmark/sp1/sha2/lib/: Cargo.toml
benchmark/sp1/sha2/lib/src/: lib.rs
benchmark/sp1/sha2/program/: Cargo.toml
benchmark/sp1/sha2/program/src/: main.rs
benchmark/sp1/sha2/script/: Cargo.toml  build.rs
contracts/: .gitignore  LICENSE.md  Makefile  README.md  foundry.toml
crates/xlayer-trace-monitor/: Cargo.toml  README.md
crates/xlayer-trace-monitor/examples/: cli-example.rs  simple-example.rs
crates/xlayer-trace-monitor/src/: constants.rs  lib.rs  tracer.rs  transaction.rs  utils.rs
demo/: .env.contracts  Dockerfile  Makefile  ZKBisection.md  docker-compose.yaml  go.mod  issue.md  readme.md
demo-sp1/: .env  Cargo.toml  Dockerfile  Makefile  README.md  config.example.toml  docker-compose.yaml  env.example
demo-sp1/contracts/: foundry.toml
demo-sp1/contracts/script/: Deploy.s.sol
demo-sp1/contracts/src/: DisputeGame.sol  DisputeGameFactory.sol  OutputOracle.sol
demo-sp1/contracts/src/interfaces/: ISP1Verifier.sol
demo-sp1/contracts/src/lib/: Types.sol
demo-sp1/crates/bindings/: Cargo.toml
demo-sp1/crates/bindings/src/: lib.rs
demo-sp1/crates/core/: Cargo.toml
demo-sp1/crates/core/src/: block.rs  executor.rs  lib.rs  state.rs  trace.rs  tx.rs  types.rs
demo-sp1/crates/core/src/dex/: account.rs  mod.rs
demo-sp1/crates/host/: Cargo.toml
demo-sp1/crates/host/src/: bisection.rs  challenger.rs  config.rs  lib.rs  proposer.rs  prover.rs  prover_mock.rs  witness.rs
demo-sp1/crates/smt/: Cargo.toml
demo-sp1/crates/smt/src/: hasher.rs  lib.rs  proof.rs  tree.rs
demo-sp1/elf/: block-verify-program
demo-sp1/programs/block-verify/: Cargo.toml
demo-sp1/programs/block-verify/src/: main.rs
devnet/: .gitignore  .tee.env  0-all.sh  1-start-l1.sh  2-deploy-op-contracts.sh  3-op-init.sh  4-op-start-service.sh  5-run-op-succinct.sh  5.1-run-kailua.sh  5.2-run-kailua-cli.sh  6-run-kailua.sh  7-deploy-blacklist.sh  7-deploy-railgun.sh  7-run-railgain.sh  7-run-railgun.sh  7-run-tee-e2e.sh  7-run-tee-game.sh  8-deploy-railgun-subgraph.sh  8-deploy-subgraph.sh  9-test-wallet.sh  Dockerfile.base-consensus  Dockerfile.xlayer-kona-seq  MAINNET_GENESIS_GUIDE.md  MAINNET_GENESIS_QUICKSTART.md  MEMORY_PROFILING.md  Makefile  PROFILING_RETH.md  RAILGUN_INTEGRATION.md  README.md  STRESS_TEST_GUIDE.md  aa_gas_used.py  bench_diagnoise.md  check_aa.py  clean.sh  docker-compose-externalrpc.yml  docker-compose-op-succinct-gpu.yml  docker-compose-sp1-cluster.yml  docker-compose-tee.yml  docker-compose.tee.yml  docker-compose.yml  (+10 more)
docs/: HOW-TO-APPLY-KONA-SINGLE-IMAGE.md  MEMORY_PROFILING.md  OFFCPU_PROFILING.md  PERF_TUI_REFERENCE.md  PROFILING_RETH.md
gravity/: 0001-local-testing-sdk.patch  0001-local-testing.patch  Makefile  README.md
indexer/: go.mod  go.sum  main.go  rpc.go  types.go
local/: README.md
parser/: go.mod  parser.go  parser_test.go  registry.go  types.go
railgun/: 0001-add-railgun-demo.patch  0001-circuits-v2-macos-fix.patch  0002-add-local-circuits-support.patch  build-circuits-v2.sh  run.sh
replayor/: .dockerignore  .env.example  .gitignore  CONFIGURATION.md  Dockerfile  Makefile  README.md  docker-compose.yml  gen-template.sh  geth-config.toml.example  geth.env.example  geth.sh  go.mod  go.sum  jwt.txt  op-reth-init.sh  replayor.docker.env.example  replayor.env.example  replayor.sh  reth.docker.env.example  reth.env.example  reth.sh  rollup.json  unwind.sh
rpc-setup/: Makefile  README.md  docker-compose.yml  network-presets.env  one-click-setup.sh
scripts/: cast-create-8021tx.sh  e2e.sh
sdk/eip8130-sdk-rs/: Cargo.toml  README.md
sdk/eip8130-sdk-rs/src/: main.rs
sdk/eip8130-sdk-rs/tests/: EIP-8130-TEST-PLAN.md  EIP-8130-TEST-REPORT.md  boundary-auth.sh  boundary-encoding.sh  boundary-payer.sh  boundary-phase.sh  boundary-spec.sh  lib.sh  run-basic-tests.sh  run-boundary-tests.sh  run-eip8130-tests.sh
test/zkvm/jolt/: Cargo.toml  README.md  bootstrap
test/zkvm/jolt/.cargo/: config.toml
test/zkvm/jolt/.devcontainer/: devcontainer.json  post-create.sh
test/zkvm/jolt/crates/multithread-test/guest/: Cargo.toml
test/zkvm/jolt/crates/multithread-test/guest/src/: lib.rs  main.rs
test/zkvm/jolt/crates/multithread-test/host/: Cargo.toml  README.md
test/zkvm/jolt/crates/multithread-test/host/src/: main.rs  native.rs
test/zkvm/sp1/script/: Cargo.toml  build.rs
(+624 files in other folders)
