[package]
name = "xlayer-trace-monitor"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Transaction and block tracing monitor for X Layer"
repository = "https://github.com/okx/xlayer-toolkit"
homepage = "https://github.com/okx/xlayer-toolkit"

[dependencies]
alloy-primitives = "0.7"
tracing = "0.1"

[lints.rust]
unsafe_code = "forbid"
unused = "warn"
missing_docs = "warn"

