[workspace]
members = ["guest"]

[package]
name = "fibonacci-bench"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fibonacci-bench"
path = "src/main.rs"

[dependencies]
jolt-sdk = { git = "https://github.com/a16z/jolt", rev = "2e05fe883920054df2ee3a6df8f85c2caba77c99", features = ["host"] }
guest = { package = "fibonacci-guest", path = "./guest" }
clap = { version = "4.0", features = ["derive"] }
benchmark-utils = { path = "../../utils" }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[patch.crates-io]
ark-bn254 = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
allocative = { git = "https://github.com/facebookexperimental/allocative", rev = "85b773d85d526d068ce94724ff7a7b81203fc95e" }
