[package]
name = "xlayer-host"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
bincode.workspace = true
reqwest.workspace = true
tiny-keccak.workspace = true

# SP1 SDK for ZK proving (supports mock/local/network modes via SP1_PROVER env var)
sp1-sdk.workspace = true

xlayer-core = { path = "../core" }
xlayer-smt = { path = "../smt" }
