[package]
name = "sha2-guest"
version = "0.1.0"
edition = "2021"

[features]
guest = []

[dependencies]
jolt = { package = "jolt-sdk", git = "https://github.com/a16z/jolt", rev = "2e05fe883920054df2ee3a6df8f85c2caba77c99" }
jolt-inlines-sha2 = { git = "https://github.com/a16z/jolt", rev = "2e05fe883920054df2ee3a6df8f85c2caba77c99" }
sha2 = { version = "0.10", default-features = false }
serde = { version = "1", default-features = false, features = ["alloc"] }
