[package]
name = "sha2-host"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sha2-bench"
path = "src/main.rs"

[dependencies]
risc0-zkvm = { version = "3.0.5", features = ["prove"] }
sha2-core = { path = "../lib" }
sha2-methods = { path = "../methods" }
clap = { version = "4.0", features = ["derive"] }
benchmark-utils = { path = "../../../utils" }
bincode = "1.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
