[package]
name = "sha2-lib"
version = "0.1.0"
edition = "2021"

[features]
default = []
precompile = ["dep:sha2-precompile"]

[dependencies]
alloy-sol-types = { workspace = true }
sha2 = "0.10"
sha2-precompile = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.9-sp1-6.0.0", optional = true }
