[package]
name = "sha2-program"
version = "0.1.0"
edition = "2021"

[workspace]

[features]
default = []
precompile = ["dep:sha2-precompile"]

[dependencies]
alloy-sol-types = "*"
sp1-zkvm = { version = "6.0.1" }
sha2 = "0.10"
sha2-precompile = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.9-sp1-6.0.0", optional = true }
