[package]
name = "sha2-script"
version = "0.1.0"
edition = "2021"
default-run = "sha2-bench"

[[bin]]
name = "sha2-bench"
path = "src/bin/main.rs"

[dependencies]
sp1-sdk = { version = "6.0.1", features = ["blocking", "native-gnark"] }
clap = { version = "4.0", features = ["derive", "env"] }
alloy-sol-types = { workspace = true }
sha2-lib = { path = "../lib" }
benchmark-utils = { path = "../../../utils" }
dotenv = "0.15.0"
postcard = { version = "1.0", features = ["alloc"] }
hex = "0.4.3"

[features]
cuda = ["sp1-sdk/cuda"]

[build-dependencies]
sp1-build = { version = "6.0.1" }
