[package]
version = "0.1.0"
name = "multithread-script"
edition = "2021"
default-run = "multithread"

[[bin]]
name = "multithread"
path = "src/bin/main.rs"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"

[dependencies]
sp1-sdk = "5.2.4"
clap = { version = "4.0", features = ["derive", "env"] }
dotenv = "0.15.0"

[build-dependencies]
sp1-build = "5.2.4"
